--- a/GmxVCount.Tests/GmxVCount.Tests.csproj
+++ b/GmxVCount.Tests/GmxVCount.Tests.csproj
@@ -12,10 +12,6 @@
     <AssemblyName>GmxVCount.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,9 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="nunit.framework, Version=2.5.2.9222, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Dependencies\NUnit\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -75,20 +71,10 @@
     <EmbeddedResource Include="TestFiles\xmlspace.xlf" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GmxVCount.Model\GmxVCount.Model.csproj">
-      <Project>{3eb5d674-2288-4c6f-8d82-690b42f8d74c}</Project>
-      <Name>GmxVCount.Model</Name>
-    </ProjectReference>
     <ProjectReference Include="..\GmxVCount\GmxVCount.csproj">
       <Project>{8C8E5364-A484-492D-9952-AEA99B91B0C3}</Project>
       <Name>GmxVCount</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
